--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -6,6 +6,10 @@
       href: overview.md
     - name: 適切な MariaDB オプションの選択
       href: select-right-deployment-type.md
+    - name: サービスの更新情報
+      items:
+        - name: SSL ルート証明書の期限切れ
+          href: concepts-certificate-rotation.md
 - name: クイックスタート
   expanded: true
   items:
