commit translated contents

--- a/articles/cognitive-services/Translator/index.yml
+++ b/articles/cognitive-services/Translator/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 10/14/2019
   ms.author: erhopf
-  ms.openlocfilehash: 26fc174ef0993339487a2edcc32cbb4fd864f96e
-  ms.sourcegitcommit: bb0afd0df5563cc53f76a642fd8fc709e366568b
+  ms.openlocfilehash: 275f4d4228e28e3f8c31263001b48fa28d46e353
+  ms.sourcegitcommit: 07166a1ff8bd23f5e1c49d4fd12badbca5ebd19c
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83592748"
+  ms.lasthandoff: 09/15/2020
+  ms.locfileid: "90090008"
 landingContent:
 - title: Translator
   linkLists:
@@ -40,18 +40,8 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
-    - text: テキストを翻訳する
-      url: quickstart-translate.md
-    - text: テキストを表記変換する
-      url: quickstart-transliterate.md
-    - text: 言語検出
-      url: quickstart-detect.md
-    - text: 辞書検索
-      url: quickstart-dictionary.md
-    - text: 文の長さを決定する
-      url: quickstart-sentences.md
-    - text: サポートされている言語を一覧表示する
-      url: quickstart-languages.md
+    - text: クイック スタート
+      url: quickstart-translator.md
   - linkListType: tutorial
     links:
     - text: WPF 翻訳アプリを作成する (C#)
