--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.author: jmartens
   ms.date: 09/17/2020
   ms.custom: contperfq1
-  ms.openlocfilehash: 19aba3cd915ac980f2f21e2457365fb6768d10c2
-  ms.sourcegitcommit: 5d7f8c57eaae91f7d9cf1f4da059006521ed4f9f
+  ms.openlocfilehash: c103b04fff2cc0b1d5b804c16f98e63fd1aa3e87
+  ms.sourcegitcommit: 1fe5127fb5c3f43761f479078251242ae5688386
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "89668801"
+  ms.lasthandoff: 09/14/2020
+  ms.locfileid: "90068287"
 landingContent:
 - title: 作業を開始しましょう。コード ファースト
   linkLists:
@@ -42,9 +42,9 @@ landingContent:
       url: concept-designer.md
   - linkListType: tutorial
     links:
-    - text: AutoML の概要
+    - text: はじめに (AutoML)
       url: tutorial-first-experiment-automated-ml.md
-    - text: デザイナーの概要
+    - text: はじめに (デザイナー)
       url: tutorial-designer-automobile-price-train-score.md
   - linkListType: reference
     links:
@@ -58,7 +58,7 @@ landingContent:
       url: how-to-deploy-existing-model.md
     - text: MLflow モデルの追跡とデプロイ
       url: how-to-use-mlflow.md
-- title: MLOps:モデルの展開と管理
+- title: モデルの展開と管理 (MLOps)
   linkLists:
   - linkListType: how-to-guide
     links:
