--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -18,12 +18,32 @@
           href: common-questions-server-migration.md
 - name: チュートリアル
   items:
-    - name: VMware VM の評価と移行
+    - name: 発見
       items:
-        - name: VMware VM の評価と移行の準備をする
-          href: tutorial-prepare-vmware.md
-        - name: 移行のために VMware VM を評価する
-          href: tutorial-assess-vmware.md
+        - name: VMware VM を検出する
+          href: tutorial-discover-vmware.md
+        - name: Hyper-V VM を検出する
+          href: tutorial-discover-hyper-v.md
+        - name: 物理サーバーを検出する
+          href: tutorial-discover-physical.md
+        - name: AWS インスタンスを検出する
+          href: tutorial-discover-aws.md
+        - name: インポートされたサーバーを検出する
+          href: tutorial-discover-import.md
+    - name: アクセス
+      items:
+        - name: Azure VM への移行のために VMware VM を評価する
+          href: tutorial-assess-vmware-azure-vm.md
+        - name: AVS への移行のために VMware VM を評価する
+          href: tutorial-assess-vmware-azure-vmware-solution.md
+        - name: Azure への移行のために Hyper-V VM を評価する
+          href: tutorial-assess-hyper-v.md
+        - name: Azure への移行のために物理サーバーを評価する
+          href: tutorial-assess-physical.md
+        - name: Azure への移行のために AWS インスタンスを評価する
+          href: tutorial-assess-aws.md
+    - name: 移行
+      items:
         - name: VMware VM を移行する
           items:
             - name: VMware VM の移行オプションについて
@@ -32,30 +52,12 @@
               href: tutorial-migrate-vmware.md
             - name: エージェントベース移行で VMware VM を移行する
               href: tutorial-migrate-vmware-agent.md
-    - name: Hyper-V VM の評価と移行
-      items:
-        - name: Hyper-V の評価と移行の準備をする
-          href: tutorial-prepare-hyper-v.md
-        - name: 移行のために Hyper-V VM を評価する
-          href: tutorial-assess-hyper-v.md
         - name: Hyper-V VM を移行する
           href: tutorial-migrate-hyper-v.md
-    - name: 物理サーバーの評価と移行
-      items:
-        - name: 物理サーバーの評価と移行の準備をする
-          href: tutorial-prepare-physical.md
-        - name: 物理サーバーを評価する
-          href: tutorial-assess-physical.md
         - name: 物理サーバーを移行する
           href: tutorial-migrate-physical-virtual-machines.md
-    - name: AWS の VM を評価して移行する
-      items:
-        - name: アマゾン ウェブ サービス (AWS) の VM を見つけて評価し、Azure に移行する
+        - name: AWS インスタンスを移行する
           href: tutorial-migrate-aws-virtual-machines.md
-    - name: 移行の対象となるインポートされたサーバーを評価する
-      items:
-        - name: 移行の対象となるインポートされたサーバーを評価する
-          href: tutorial-assess-import.md
 - name: 概念
   items:
     - name: Azure Migrate を使用した移行計画の作成
