--- a/articles/resource-mover/toc.yml
+++ b/articles/resource-mover/toc.yml
@@ -18,9 +18,9 @@
   items:
     - name: 移動の概要
       href: about-move-process.md
-    - name: Azure VM のリージョン移動に関するサポート マトリックス
+    - name: リージョン間での Azure VM の移動をサポートする
       href: support-matrix-move-region-azure-vm.md
-    - name: Azure SQL のリージョン移動に関するサポート マトリックス
+    - name: リージョン間での Azure SQL の移動をサポートする
       href: support-matrix-move-region-sql.md
 - name: ハウツー ガイド
   items:
@@ -34,11 +34,11 @@
           href: move-region-within-resource-group.md
     - name: リージョンの移動の管理
       items:
-        - name: リージョンの移動のターゲット設定を変更する
+        - name: 宛先の設定を変更する
           href: modify-target-settings.md
-        - name: リージョンの移動コレクションからリソースを削除する
+        - name: 移動コレクションからリソースを削除する
           href: remove-move-resources.md
-        - name: リージョンの移動プロセスによって作成されたリソースの管理
+        - name: 移動中に作成されたリソースの管理
           href: manage-resources-created-move-process.md
 - name: リソース
   items:
