--- a/articles/remote-rendering/overview/features/toc.yml
+++ b/articles/remote-rendering/overview/features/toc.yml
@@ -4,6 +4,8 @@
   href: debug-rendering.md
 - name: 階層状態のオーバーライド
   href: override-hierarchical-state.md
+- name: カメラ
+  href: camera.md
 - name: ステージ スペース
   href: stage-space.md
 - name: Late Stage Reprojection
