--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -21,7 +21,19 @@
   expanded: true
   items:
     - name: 認証方法
-      href: concept-authentication-methods.md
+      items:
+        - name: 概要
+          href: concept-authentication-methods.md
+        - name: Microsoft Authenticator アプリ
+          href: concept-authentication-authenticator-app.md
+        - name: OATH トークン
+          href: concept-authentication-oath-tokens.md
+        - name: パスワードレス
+          href: concept-authentication-passwordless.md
+        - name: 電話のオプション
+          href: concept-authentication-phone-options.md
+        - name: セキュリティの質問
+          href: concept-authentication-security-questions.md
     - name: セルフサービス パスワード リセット
       items:
         - name: パスワード リセットのしくみ
@@ -46,8 +58,6 @@
           href: /office365/admin/security-and-compliance/set-up-multi-factor-authentication?view=o365-worldwide
         - name: よく寄せられる質問
           href: multi-factor-authentication-faq.md
-    - name: パスワードレスの認証
-      href: concept-authentication-passwordless.md
     - name: パスワード保護
       items:
         - name: クラウドで脆弱なパスワードを排除する
